--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('SymSparse', ['cpp'], version='1.0.1')
+project('SymSparse', ['cpp'], version: '1.0.1')
 
 symsparse = declare_dependency(include_directories : include_directories('.'))
 
