Add SmallVector dependency

--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,7 @@
 project('SymSparse', ['cpp'], version: '1.0.1')
 
-symsparse = declare_dependency(include_directories : include_directories('.'))
+smallvector = subproject('SmallVector').get_variable('smallvector')
+
+symsparse = declare_dependency(include_directories : include_directories('.'),
+  dependencies : smallvector)
 
