--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 project('SymSparse', ['cpp'], version: '1.0.1')
 
-smallvector = subproject('SmallVector').get_variable('smallvector')
+smallvector = subproject('SmallVector').get_variable('smallvector_dep')
 
-symsparse = declare_dependency(include_directories : include_directories('.'),
+symsparse_dep = declare_dependency(include_directories : include_directories('.'),
   dependencies : smallvector)
 
